# ai_powered_threat_intelligence

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tox.ini
app/ai_generator/: index.py
app/tests/: conftest.py  test_ai_generator.py
cdk/: app.py  cdk.json  constants.py
cdk/l3constructs/helpers/: base_stack.py  helper.py
cdk/l3constructs/lambda_functions/: L3Lambda.py  L3LambdaJava.py  L3LambdaPython.py  README.md
cdk/l3constructs/s3/: l3_bucket.py
cdk/stacks/: ai_security_recommendations.py
cdk/tests/: test_ai_security_recommendations_stack.py
scripts/: cleanup_cdk_bootstrap.py
